<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_golf_buddies"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="Friends" />
        <item
            android:id="@+id/nav_tee_times"
            android:icon="@drawable/ic_golf_course_black_24dp"
            android:title="My Tee Times" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="Messages" />
    </group>
    <group android:checkableBehavior="single" android:id="@string/navbar_settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="Settings" />

    </group>
</menu>
